--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a nuxt project",
   "main": "index.js",
   "scripts": {
-    "dev": "nuxt"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "cookieparser": "^0.1.0",
+    "dayjs": "^1.9.6",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.14.7"
   }
