--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,17 +9,17 @@ jobs:
     steps:
     # 下载源码
     - name: Checkout
-          uses: actions/checkout@master
+          uses: actions/checkout@main
     # 打包构建
     - name: Build
-          uses: actions/setup-node@master
+          uses: actions/setup-node@main
         - run: npm install
         - run: npm run build
         - run: tar -zcvf release.tgz .nuxt static nuxt.config.js package.json package-lock.json
     # 发布 Release
     - name: Create Release
           id: create_release
-          uses: actions/create-release@master
+          uses: actions/create-release@main
           env:
             GITHUB_TOKEN: ${{ secrets.TOKEN }}
           with:
@@ -30,7 +30,7 @@ jobs:
     # 上传构建结果到 Release
     - name: Upload Release Asset
           id: upload-release-asset
-          uses: actions/upload-release-asset@master
+          uses: actions/upload-release-asset@main
           env:
             GITHUB_TOKEN: ${{ secrets.TOKEN }}
           with:
@@ -40,7 +40,7 @@ jobs:
             asset_content_type: application/x-tgz
     # 部署到服务器
     - name: Deploy
-          uses: appleboy/ssh-action@master
+          uses: appleboy/ssh-action@main
           with:
             host: ${{ secrets.HOST }}
             username: ${{ secrets.USERNAME }}
