--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookieparser": "^0.1.0",
     "dayjs": "^1.9.6",
     "js-cookie": "^2.2.1",
+    "markdown-it": "^12.0.2",
     "nuxt": "^2.14.7"
   }
 }
